MQTT client added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "sdkconfig.h": "c",
         "string": "c",
-        "random": "c"
+        "random": "c",
+        "ui_server_handler.h": "c",
+        "array": "c"
     }
 }
