--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,10 @@
 idf_component_register(SRCS "iot_module_main.c"
                             "ui/ui_server.c"
+                            "ui/ui_server_handler.c"
                             "config/config.c"
                             "modbus/modbus.c"
                             "gpio/gpio.c"
+                            "mqtt/mqtt.c"
                         INCLUDE_DIRS "."
                         EMBED_TXTFILES  "certs/cacert.pem"
                                         "certs/prvtkey.pem")
