mqtt<=>gpio connector created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "sdkconfig.h": "c",
         "string": "c",
         "random": "c",
-        "ui_server_handler.h": "c"
+        "ui_server_handler.h": "c",
+        "array": "c"
     }
 }
