OTA firmware update and upload files to spiff added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "string": "c",
         "random": "c",
         "ui_server_handler.h": "c",
-        "array": "c"
+        "array": "c",
+        "initializer_list": "c",
+        "utility": "c"
     }
 }
