--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fileupload-progress": "^0.5.0",
     "react-router-dom": "^5.1.2"
   }
 }
