--- a/config.json
+++ b/config.json
@@ -3,83 +3,85 @@
 		"speed":	9600,
 		"enable":	false
 	},
-	"gpio":	{
-		"enable":	false,
-		"config":	[{
-				"id":	2,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	4,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	5,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	12,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	13,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	14,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	15,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	18,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	23,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	32,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	33,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	34,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	35,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	36,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	39,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}]
+	"gpio":	[{
+			"id":	2,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	4,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	5,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	12,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	13,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	14,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	15,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	18,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	23,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	32,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	33,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	34,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	35,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	36,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	39,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}],
+	"mqtt":	{
+		"enable":	0,
+		"broker":	"mqtt://host",
+		"host":	"iot-module"
 	}
 }
