--- a/front/config.json
+++ b/front/config.json
@@ -1,87 +1,93 @@
 {
 	"modbus":	{
-		"speed":	9600,
-		"enable":	false
-	},
-	"mqtt":	{
-		"enable": false,
-		"broker": "mqtt://",
-		"host": "iot-module"
+		"speed":	115200,
+		"enable":	true
 	},
 	"gpio":	[{
-				"id":	2,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	4,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	5,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	12,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	13,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	14,
-				"mode":	-1,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	15,
-				"mode":	1,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	18,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	23,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	32,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	33,
-				"mode":	1,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	34,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	35,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	36,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}, {
-				"id":	39,
-				"mode":	0,
-				"pull_up":	0,
-				"pull_down":	0
-			}]
+			"id":	2,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	4,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	5,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	12,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	13,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	14,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	15,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	18,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	23,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	32,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	33,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	34,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	35,
+			"mode":	-1,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	36,
+			"mode":	0,
+			"pull_up":	0,
+			"pull_down":	0
+		}, {
+			"id":	39,
+			"mode":	0,
+			"pull_up":	0,
+			"pull_down":	0
+		}],
+	"mqtt":	{
+		"enable":	true,
+		"broker":	"mqtt://mqtt.maxx",
+		"host":	"iot-module-ip-41"
+	},
+	"curtains" : [{
+		"io_step" : 23,
+		"io_dir" : 32,
+		"io_hi_pos" : 36,
+		"lenght" : 200000
+	}]
 }
