--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ set(PROJECT_VER "0.1-beta")
 
 cmake_minimum_required(VERSION 3.5)
 
+set(EXTRA_COMPONENT_DIRS D:\\Projects\\MAXX\\github\\esp-idf-lib\\components)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
 project(iot-module)
