--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"modbus":	{
 		"speed":	115200,
-		"enable":	true
+		"enable":	false
 	},
 	"gpio":	[{
 			"id":	2,
@@ -77,7 +77,7 @@
 			"id":	39,
 			"mode":	0,
 			"pull_up":	0,
-			"pull_down":	0
+			"pull_down": 0
 		}],
 	"mqtt":	{
 		"enable":	true,
@@ -89,5 +89,10 @@
 		"io_dir" : 32,
 		"io_hi_pos" : 36,
 		"lenght" : 68000
+	}],
+	"pcf8574" : [{
+		"ex_addr" : 32,
+		"io_addr" : 100,
+		"io_config" : 255
 	}]
 }
