--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -6,6 +6,8 @@ idf_component_register(SRCS "iot_module_main.cpp"
                             "config/config.cpp"
                             "modbus/modbus.cpp"
                             "gpio/gpio.cpp"
+                            "gpiov2/gpio_v2.cpp"
+                            "mcp23xgpio/mcp23xgpio.cpp"
                             "mqtt/mqtt.cpp"
                             "time_utils.cpp"
                             "curtains/curtains.cpp"
